--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.1",
     "copyfiles": "^2.4.1",
     "nodemon": "^3.1.10",
