--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,8 +4,8 @@
       "outDir": "dist",
       "lib": ["es2020"],
       "target": "es2020",
-      "module": "Node16",
-      "moduleResolution": "Node16",
+      "module": "ESNext",
+      "moduleResolution": "Bundler",
       "esModuleInterop": true,
       "types": ["node"]
     },
