--- a/server/package.json
+++ b/server/package.json
@@ -25,12 +25,14 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "nodemailer": "^7.0.3",
-    "prisma": "^6.7.0"
+    "prisma": "^6.7.0",
+    "zod": "^3.25.17"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.1",
+    "@types/nodemailer": "^6.4.17",
     "copyfiles": "^2.4.1",
     "nodemon": "^3.1.10",
     "typescript": "^5.8.3"
