--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,7 +7,8 @@
       "module": "ESNext",
       "moduleResolution": "Bundler",
       "esModuleInterop": true,
-      "types": ["node"]
+      "types": ["node"],
+      "strict" : true
     },
     "include": ["src"]
   }
