--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "node ./dist/index.js",
     "server": "nodemon ./dist/index.js",
     "watch": "tsc -w",
-    "build": "tsc && npm run copy-files",
+    "build": "npx prisma generate && tsc && npm run copy-files",
     "dev": "concurrently \"npm run watch\" \"npm run server\" \"npm run watch-views\"",
     "copy-files": "copyfiles -u 1 \"src/views/**/*\" dist/",
     "watch-views": "nodemon --watch src/views -e ejs -x \"npm run copy-files\""
@@ -18,20 +18,24 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "bcrypt": "^6.0.0",
     "bullmq": "^5.52.3",
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "glob": "^11.0.2",
+    "lru-cache": "^11.1.0",
     "nodemailer": "^7.0.3",
     "prisma": "^6.7.0",
-    "zod": "^3.25.17"
+    "zod": "^3.25.20"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/ejs": "^3.1.5",
-    "@types/express": "^5.0.1",
+    "@types/express": "^5.0.2",
     "@types/nodemailer": "^6.4.17",
     "copyfiles": "^2.4.1",
     "nodemon": "^3.1.10",
