--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,14 +1,17 @@
 {
-    "compilerOptions": {
-      "rootDirs": ["src"],
-      "outDir": "dist",
-      "lib": ["es2020"],
-      "target": "es2020",
-      "module": "ESNext",
-      "moduleResolution": "Bundler",
-      "esModuleInterop": true,
-      "types": ["node"],
-      "strict" : true
-    },
-    "include": ["src"]
-  }
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "allowJs": false
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
+
+}
