--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "lru-cache": "^11.1.0",
     "nodemailer": "^7.0.3",
     "prisma": "^6.7.0",
+    "uuid": "^11.1.0",
     "zod": "^3.25.20"
   },
   "devDependencies": {
