--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "glob": "^11.0.2",
+    "jsonwebtoken": "^9.0.2",
     "lru-cache": "^11.1.0",
     "nodemailer": "^7.0.3",
     "prisma": "^6.7.0",
@@ -37,6 +38,7 @@
     "@types/cors": "^2.8.18",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/nodemailer": "^6.4.17",
     "copyfiles": "^2.4.1",
     "nodemon": "^3.1.10",
