--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDirs": ["src","src/custom-types.d.ts"],
     "allowJs": false
   },
   "include": ["src/**/*"],
